--- a/latest/osdk.manifest.component
+++ b/latest/osdk.manifest.component
@@ -7,6 +7,7 @@
         "id",
         "type"
     ],
+    "additionalProperties": false,
     "properties": {
         "id": {
             "description": "The unique identifier for this manifest",
@@ -34,6 +35,7 @@
                 ".*": {
                     "type": "object",
                     "properties": {
+                        "additionalProperties": false,
                         "cmd": {
                             "description": "Command to run the tool",
                             "type": "string"
@@ -76,6 +78,13 @@
         "provides": {
             "type": "array",
             "description": "An array of features that this component provides (note: by default all components provides they own id as a feature)",
+            "items": {
+                "type": "string"
+            }
+        },
+        "subdirs": {
+            "type": "array",
+            "description": "An array of subdirectories that contains source files for this component",
             "items": {
                 "type": "string"
             }
