Added cutekit manifests

--- a/latest/cutekit.manifest.component
+++ b/latest/cutekit.manifest.component
@@ -1,7 +1,7 @@
 {
-    "$id": "https://schemas.cute.engineering/stable/osdk.manifest.component.v1",
+    "$id": "https://schemas.cute.engineering/stable/cutekit.manifest.component.v1",
     "$schema": "https://json-schema.org/draft/2020-12/schema",
-    "description": "A representation of a component manifest for OSDK",
+    "description": "A representation of a component manifest for CuteKit",
     "type": "object",
     "required": [
         "id",
