--- a/latest/cutekit.manifest.component
+++ b/latest/cutekit.manifest.component
@@ -5,7 +5,8 @@
     "type": "object",
     "required": [
         "id",
-        "type"
+        "type",
+        "$schema"
     ],
     "additionalProperties": false,
     "properties": {
