feat: force the value of the $schema

--- a/latest/cutekit.manifest.component
+++ b/latest/cutekit.manifest.component
@@ -1,5 +1,5 @@
 {
-    "$id": "https://schemas.cute.engineering/stable/cutekit.manifest.component.v1",
+    "$id": "https://schemas.cute.engineering/stable/cutekit.manifest.component",
     "$schema": "https://json-schema.org/draft/2020-12/schema",
     "description": "A representation of a component manifest for CuteKit",
     "type": "object",
@@ -12,7 +12,7 @@
     "properties": {
         "$schema": {
             "description": "The schema that this manifest conforms to",
-            "type": "string"
+            "const": "https://schemas.cute.engineering/stable/cutekit.manifest.component"
         },
         "id": {
             "description": "The unique identifier for this manifest",
